--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
 }
 .img, .imgI {
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: black;
