--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aqua !important; 
+    background-color: rgb(66, 66, 66) !important; 
     display: flex;
     justify-content: center;
 }
@@ -9,10 +9,32 @@ body {
     flex-direction: row;
 }
 
+.contadorIgual{
+    background-color: rgb(81, 139, 0);
+    display: flex;
+    align-items: center;
+    max-height: 80px;
+    width:100px;
+    border-radius: 26px;
+}
+
+.contadorIncorrecto{
+    background-color: darkred;
+    display: flex;
+    align-items: center;
+    max-height: 80px;
+    width:100px;
+    border-radius: 26px;
+}
+
 .column {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
+    margin: 0 auto; 
+    position: relative; 
+    margin: 0; 
 }
+
 
 .img, .imgD {
     display: flex;
@@ -27,4 +49,7 @@ body {
     color: rgb(255, 255, 255);
     cursor: pointer;
     border-radius: 8px;
+    opacity: 1;
+    transition: opacity 0.5s ease, transform 1.5s ease; /* Agregamos la propiedad transform a la transición */
+
 }
