--- a/public/style.css
+++ b/public/style.css
@@ -53,3 +53,34 @@ body {
     transition: opacity 0.5s ease, transform 1.5s ease; /* Agregamos la propiedad transform a la transición */
 
 }
+
+@keyframes desaparecer-y-subir {
+    0% {
+    opacity: 1;
+    transform: translateY(0);
+    }
+    20%{
+        opacity: 0.8;
+        transform: translateY(20%);
+    }
+    40%{
+        opacity: 0.6;
+        transform: translateY(40%);
+    }
+    60%{
+        opacity: 0.4;
+        transform: translateY(60%);
+    }
+    80%{
+        opacity: 0.2;
+        transform: translateY(80%);
+    }
+    100% {
+    opacity: 0;
+    transform: translateY(100%);
+    }
+}
+
+.img, .imgD {
+    animation: desaparecer-y-subir 0.5s ease-in-out;
+}
