--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 
-.img, .imgD {
+.Cuadrado, .CuadradoD {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,6 +81,6 @@ body {
     }
 }
 
-.img, .imgD {
+.Cuadrado, .CuadradoD {
     animation: desaparecer-y-subir 0.5s ease-in-out;
 }
