--- a/public/style.css
+++ b/public/style.css
@@ -54,33 +54,30 @@ body {
 
 }
 
-@keyframes desaparecer-y-subir {
-    0% {
-    opacity: 1;
-    transform: translateY(0);
-    }
-    20%{
-        opacity: 0.8;
-        transform: translateY(20%);
-    }
-    40%{
-        opacity: 0.6;
-        transform: translateY(40%);
-    }
-    60%{
-        opacity: 0.4;
-        transform: translateY(60%);
-    }
-    80%{
-        opacity: 0.2;
-        transform: translateY(80%);
-    }
-    100% {
-    opacity: 0;
-    transform: translateY(100%);
-    }
-}
+
 
 .Cuadrado, .CuadradoD {
     animation: desaparecer-y-subir 0.5s ease-in-out;
 }
+
+
+.animate__shakeX {
+    --animate-duration: 1s;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+@keyframes animate__shakeX {
+    0%, 100% {
+        transform: translateX(0);
+    }
+
+    10%, 30%, 50%, 70%, 90% {
+        transform: translateX(-10px);
+    }
+
+    20%, 40%, 60%, 80% {
+        transform: translateX(10px);
+    }
+}
+
