--- a/public/style.css
+++ b/public/style.css
@@ -20,11 +20,10 @@ body {
     background-color: rgb(81, 139, 0);
     display: flex;
     align-items: center;
-    max-height: 80px;
-    width:100%;
     border-radius: 26px;
     margin-left: 5%;
-    margin-right: 1%; 
+    margin-right: 1%;
+    font-size: 1.9vh;
 }
 
 .contadorIncorrecto{
@@ -32,24 +31,35 @@ body {
     background-color: darkred;
     display: flex;
     align-items: center;
-    max-height: 80px;
-    max-width: 80%;
+    font-size: 1.9vh;
     border-radius: 26px;
     margin-left: 1%; 
     margin-right: 5%;
 }
 
-
+.reiniciar{
+    align-items: center;
+    justify-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: #000000;
+    padding: 10px;
+    max-width: 35%;
+    font-size: 2.3vh;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    border-radius: 20px;
+    opacity: 1;
+}
 .mesclador {
     align-items: center;
     justify-items: center;
     display: flex;
     justify-content: center;
-    background-color: black;
+    background-color: #000000;
     padding: 10px;
-    height: 80px;
-    width:100%;
-    font-size: 18px;
+    max-width: 35%;
+    font-size: 2.3vh;
     color: rgb(255, 255, 255);
     cursor: pointer;
     border-radius: 20px;
@@ -57,9 +67,12 @@ body {
 }
 
 .contadorIgual, .contadorIncorrecto, .mesclador {
-    min-width: 100px;
+    min-width: 20%;
+    min-height: 2%;
+    max-width: 37%;
+    max-height: 10%;
+    margin-top: 3%;
 }
-
 
 .Cuadrado, .CuadradoD {
     display: flex;
@@ -138,16 +151,152 @@ body {
 
 @media (max-width: 700px) {
     .column,.Cuadrado, .CuadradoD{
-        margin-left: -1%;
-        margin-right: -1%;
+        margin-left: 0.3%;
+        margin-right: 0.3%;
     }
-    .contadorIgual, .contadorIncorrecto{
-        margin: 1%;
+
+}
+@media (max-width: 680px) {
+    .column,.Cuadrado, .CuadradoD{
+        margin-left: 0.2%;
+        margin-right: 0.2%;
+    }
+}
+@media (max-width: 760px) {
+    .contadorIgual{
+        margin-left: 5%;
+    }
+}
+@media (max-width: 760px) {
+    .contadorIncorrecto{
+        margin-right: 5%;
+    }
+}
+@media (max-width: 740px) {
+    .contadorIgual{
+        margin-left: 4%;
+    }
+}
+@media (max-width: 740px) {
+    .contadorIncorrecto{
+        margin-right: 4%;
+    }
+}
+@media (max-width: 720px) {
+    .contadorIgual{
+        margin-left: 3%;
+    }
+}
+@media (max-width: 720px) {
+    .contadorIncorrecto{
+        margin-right: 3%;
+    }
+}
+@media (max-width: 700px) {
+    .contadorIgual{
+        margin-left: 2%;
+    }
+}
+@media (max-width: 700px) {
+    .contadorIncorrecto{
+        margin-right: 2%;
+    }
+}
+@media (max-width: 680px) {
+    .contadorIgual{
+        margin-left: 1%;
+    }
+}
+@media (max-width: 680px) {
+    .contadorIncorrecto{
+        margin-right: 1%;
+    }
+}
+@media (max-width: 670px) {
+    .contadorIgual{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+@media (max-width: 670px) {
+    .contadorIncorrecto{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+}
+
+
+@media (max-width: 740px) {
+    .column,.Cuadrado, .CuadradoD{
+        margin-left: 0.1%;
+        margin-right: 0.1%;
+    }
+}
+
+@media (max-width: 1100px) {
+    .Cuadrado, .CuadradoD{
+        width: 10vw;
+        height: 10vw;
+    }
+}
+@media (max-width: 700px) {
+    .Cuadrado, .CuadradoD{
+        width: 13vw;
+        height: 13vw;
+    }
+}
+
+@media (max-width: 1200px) {
+    .container{
+        margin-top: 2%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container{
+        margin-top: 4.5%;
+    }
+}
+@media (max-width: 900px) {
+    .container{
+        margin-top: 5%;
+    }
+}
+
+@media (max-width: 700px) {
+    .Cuadrado, .CuadradoD{
+        width: 13vw;
+        height: 13vw;
     }
 }
 
 @media (max-width: 520px) {
-    .container, .column, .contadorIgual, .contadorIncorrecto, .mesclador, .Cuadrado, .CuadradoD {
+    .column, .contadorIgual, .contadorIncorrecto, .mesclador, .Cuadrado, .CuadradoD {
         margin: 0%;
+    }
+}
+@media (max-width: 520px) {
+    .contadorIgual, .contadorIncorrecto, .mesclador, .Cuadrado, .CuadradoD {
+        margin: 0%;
+        margin-top: 25%;
+        
+    }
+}
+@media (max-width: 520px) {
+    .contadorIgual, .contadorIncorrecto, .mesclador {
+        min-height: 12vh;
+        min-width: 18vw;
+    }
+}
+@media (max-width: 520px) {
+    .contadorIgual{
+        margin-top: 120%;
+    }
+}
+
+@media (max-width: 520px) {
+    .Cuadrado, .CuadradoD {
+        min-height: 12vh;
+        min-width: 18vw;
     }
 }
